user-service/src/main/java/com/example/userservice/utils/exceptions/errors/UserAlreadyExistsException.java
package com.example.userservice.utils.exceptions.errors;

public class UserAlreadyExistsException {
}
